# German_affix_splitter

./: README.md  requirements.txt  setup.cfg  setup.py
German affix splitter/: german_affix_splitter.py
