[metadata]
name = german_affix_extraction
version = 0.0.1
author = Konstantin
author_email = 20081208@mail.wit.ie
description = German affix splitter implements multiple methods to return German affixes along with their Zipf frequencies.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ElectricBoogaloo6/German_affix_splitter

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
